0024821: CLang warning -Wunsequenced in StdSelect_ViewerSelector3d